Continue Classes page; fixed About and Classes jumbotron spacing.

--- a/about.css
+++ b/about.css
@@ -26,6 +26,7 @@ nav {
   flex-direction: column;
   width: 50%;
   text-align: center;
+  padding-right: 3rem;
 }
 
 .aboutJumboText h1 {
